# thpm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  PROVENANCE.md  README.md  install.sh  pyproject.toml  releasenote.md  uninstall.sh
.github/workflows/: ci.yml
assets/compat/: theme-env.sh
assets/hooks/: 90-thpm
assets/qml/: Panel.qml  Panel.qml.in  manifest.json
assets/templates/: thpm-cava.ini.tpl  thpm-firefox.css.tpl  thpm-fish.fish.tpl  thpm-fzf.fish.tpl  thpm-hermes.json.tpl  thpm-heroic.css.tpl  thpm-nwg-dock.css.tpl  thpm-qt6ct.conf.tpl  thpm-qutebrowser.py.tpl  thpm-spicetify.ini.tpl  thpm-superfile.toml.tpl  thpm-vencord-system24.theme.css.tpl  thpm-vencord.theme.css.tpl  thpm-vicinae.toml.tpl  thpm-zellij.kdl.tpl  thpm-zen.css.tpl
docs/: architecture.md  plugin-security-and-distribution-design.md  plugins.md  quattro-compatibility-plan.md
packaging/aur/thpm/: .SRCINFO  PKGBUILD
packaging/aur/thpm-git/: .SRCINFO  PKGBUILD
scripts/: release-assets.sh
src/thpm/: __init__.py  cli.py  compat.py  files.py  integrations.py  migrate.py  models.py  omarchy.py  palette.py  paths.py  registry.py  resources.py  service.py  snapshot.py  state.py  templates.py  tui.py  tui.tcss  ui.py  update.py
tests/: run.sh  test_thpm.py
